--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
-click==6.6
+click==6.7
 Flask==0.12.2
 itsdangerous==0.24
-Jinja2==2.8
-MarkupSafe==0.23
-Werkzeug==0.11.11
-jsonschema==2.5.1
+Jinja2==2.9.6
+MarkupSafe==1.0
 nltk==3.2.4
-numpy==1.13.1
+numpy==1.13.3
 pandas==0.20.3
-scikit-image==0.13.0
-scikit-learn==0.19.0
+python-dateutil==2.6.1
+pytz==2017.2
+scikit-learn==0.19.1
 scipy==0.19.1
+six==1.11.0
 sklearn==0.0
-statsmodels==0.8.0
-unicodecsv==0.14.1
+Werkzeug==0.12.2
 gunicorn==19.7.1
